--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,7 @@ import Hero from '../components/Hero.astro';
 				<img
 					width="1553"
 					height="873"
-					src="/assets/at-work.jpg"
+					src="/public/assets/placeholder.webp"
 					alt="Nikko Thorne"
 				/>
 			</Hero>
@@ -24,36 +24,91 @@ import Hero from '../components/Hero.astro';
 				<h2 class="section-title">Background</h2>
 				<div class="content">
 					<p>
-						Lorem ipsum dolor sit amet, <a href="https://astro.build/">Astro</a> makes people happy.
-						Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl condimentum
-						id venenatis a condimentum vitae. Dapibus ultrices in iaculis nunc. Arcu odio ut sem nulla
-						pharetra diam sit amet. Diam quis enim lobortis scelerisque fermentum dui faucibus in ornare.
+						Hello! I'm Nikko Thorne, a passionate creator with a diverse range of interests. 
+						From silversmithing and crafting unique jewelry pieces to exploring the great outdoors 
+						through kayaking and hiking, I find inspiration in every experience.
 					</p>
 					<p>
-						Arcu dui vivamus arcu felis bibendum ut tristique et egestas. Eget gravida cum sociis
-						natoque penatibus. Cras fermentum odio eu feugiat pretium nibh. Proin nibh nisl
-						condimentum id venenatis. Porta nibh venenatis cras sed felis eget velit. Id diam vel
-						quam elementum pulvinar etiam non.
+						My love for video games fuels my creativity and technical skills, while my entrepreneurial
+						spirit drives me to explore new business ventures.
 					</p>
 					<p>
-						Ultrices tincidunt arcu non sodales neque sodales ut. Sed enim ut sem viverra aliquet
-						eget sit amet. Lacus luctus accumsan tortor posuere ac ut consequat semper viverra.
-						Viverra accumsan in nisl nisi scelerisque eu ultrices. In massa tempor nec feugiat nisl
-						pretium fusce.
+						I believe in the power of continuous learning and collaboration, and I aim to infuse these
+						values into everything I create. Welcome to my portfolio, where you can discover the intersection
+						of my hobbies and professional journey!
 					</p>
 				</div>
 			</section>
 			<section>
 				<h2 class="section-title">Education</h2>
 				<div class="content">
-					<p>Corporis voluptates tenetur laudantium.</p>
+					<p>
+						Bachelor of Science in Software Engineering<br>
+						Western Governors University<br>
+						[2024]<br><br>
+						
+						Associate of Applied Science in Information Technology<br>
+						Columbia Basin College, Pasco, Washington<br>
+						[2022]</p>
 				</div>
 			</section>
 			<section>
 				<h2 class="section-title">Skills</h2>
-				<div class="content">
-					<p>officia unde omnis</p>
-				</div>
+				<div class="content"> 
+					
+				
+					<h1 style="font-size: 40px; color: #000000;">Programming Languages & Frameworks</h1>
+					<p>
+						<strong>Java</strong> 
+					</p>
+					<p>
+						<strong>JavaScript</strong> 
+					</p>
+					<p>
+						<strong>Spring Framework</strong> 
+					</p>
+				
+					<h3 style="font-size: 30px; color: #000000;">Web Development</h3>
+					<p>
+						<strong>HTML/CSS</strong> 
+					</p>
+					<p>
+						<strong>User Interface Design</strong> 
+					</p>
+					<p>
+						<strong>APIs</strong>
+					</p>
+				
+					<h3 style="font-size: 30px; color: #000000;">Back-End Development</h3>
+					<p>
+						<strong>Database Management</strong> 
+					</p>
+					<p>
+						<strong>Data Manipulation</strong> 
+					</p>
+					<p>
+						<strong>Object-Oriented Programming</strong>
+					</p>
+				
+					<h3 style="font-size: 30px; color: #000000;">Mobile Application Development</h3>
+					<p>
+						<strong>Android Development</strong> 
+					</p>
+				
+					<h3 style="font-size: 30px; color: #000000;">Problem-Solving & Analysis</h3>
+					<p>
+						<strong>Data Analysis</strong> 
+					</p>
+					<p>
+						<strong>Debugging</strong> 
+					</p>
+				
+					<h3 style="font-size: 30px; color: #000000;">Version Control & Collaboration</h3>
+					<p>
+						<strong>Version Control</strong> 
+					</p>
+					</div>
+				
 			</section>
 		</main>
 
