--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,7 @@ import Hero from '../components/Hero.astro';
 				<img
 					width="1553"
 					height="873"
-					src="/public/assets/placeholder.webp"
+					src="/assets/me/me-2.jpg"
 					alt="Nikko Thorne"
 				/>
 			</Hero>
@@ -26,12 +26,13 @@ import Hero from '../components/Hero.astro';
 					<p>
 						Hello! I'm Nikko Thorne, a passionate creator with a diverse range of interests. 
 						From silversmithing and crafting unique jewelry pieces to exploring the great outdoors 
-						through kayaking and hiking, I find inspiration in every experience.
-					</p>
+						through kayaking and hiking, I find inspiration in every experience.<br>
+					</p><br>
+
 					<p>
 						My love for video games fuels my creativity and technical skills, while my entrepreneurial
 						spirit drives me to explore new business ventures.
-					</p>
+					</p><br>
 					<p>
 						I believe in the power of continuous learning and collaboration, and I aim to infuse these
 						values into everything I create. Welcome to my portfolio, where you can discover the intersection
@@ -55,58 +56,10 @@ import Hero from '../components/Hero.astro';
 			<section>
 				<h2 class="section-title">Skills</h2>
 				<div class="content"> 
-					
-				
-					<h1 style="font-size: 40px; color: #000000;">Programming Languages & Frameworks</h1>
-					<p>
-						<strong>Java</strong> 
-					</p>
-					<p>
-						<strong>JavaScript</strong> 
-					</p>
-					<p>
-						<strong>Spring Framework</strong> 
-					</p>
-				
-					<h3 style="font-size: 30px; color: #000000;">Web Development</h3>
-					<p>
-						<strong>HTML/CSS</strong> 
-					</p>
-					<p>
-						<strong>User Interface Design</strong> 
-					</p>
-					<p>
-						<strong>APIs</strong>
-					</p>
-				
-					<h3 style="font-size: 30px; color: #000000;">Back-End Development</h3>
-					<p>
-						<strong>Database Management</strong> 
-					</p>
-					<p>
-						<strong>Data Manipulation</strong> 
-					</p>
-					<p>
-						<strong>Object-Oriented Programming</strong>
-					</p>
-				
-					<h3 style="font-size: 30px; color: #000000;">Mobile Application Development</h3>
-					<p>
-						<strong>Android Development</strong> 
-					</p>
-				
-					<h3 style="font-size: 30px; color: #000000;">Problem-Solving & Analysis</h3>
-					<p>
-						<strong>Data Analysis</strong> 
-					</p>
-					<p>
-						<strong>Debugging</strong> 
-					</p>
-				
-					<h3 style="font-size: 30px; color: #000000;">Version Control & Collaboration</h3>
-					<p>
-						<strong>Version Control</strong> 
-					</p>
+					<h1 style="font-size: 30px; color: #000000;">Java</h1>
+					<h1 style="font-size: 30px; color: #000000;">Python</h1>
+					<h1 style="font-size: 30px; color: #000000;">React</h1>
+					<h1 style="font-size: 30px; color: #000000;">MySQL</h1>
 					</div>
 				
 			</section>
