--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ const projects = (await getCollection('work'))
 				alt="Nikko Thorne smiling in a professional portrait"
 				width="480"
 					height="620"
-					src="/assets/placeholder.webp"
+					src="/assets/me/me-1.jpg"
 				/>
 			</header>
 
