--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,7 @@ import PortfolioPreview from '../components/PortfolioPreview.astro';
 // Page section components
 import ContactCTA from '../components/ContactCTA.astro';
 import Skills from '../components/Skills.astro';
+import Languages from '../components/Languages.astro';
 
 // Content Fetching: List four most recent work projects
 const projects = (await getCollection('work'))
@@ -50,7 +51,7 @@ const projects = (await getCollection('work'))
 					src="/assets/me/me-1.jpg"
 				/>
 			</header>
-
+			<Languages />
 			<Skills />
 		</div>
 
