--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -15,6 +15,7 @@ const pageDescription = description || 'The personal site of Nikko Thorne';
 
 <meta charset="UTF-8" />
 <meta name="description" property="og:description" content={description} />
+<meta property="og:description" content={description} />
 <meta name="viewport" content="width=device-width" />
 <meta name="generator" content={Astro.generator} />
 <title>{title}</title>
