--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -14,6 +14,7 @@ const pageDescription = description || 'The personal site of Nikko Thorne';
 ---
 
 <meta charset="UTF-8" />
+<meta name="description" content="Explore the portfolio of Nikko Thorne, a creative full stack developer based in Spokane, Washington. Specializing in Java, Python, SpringBoot, and React, Nikko delivers dynamic and strategic solutions for seamless user experiences.">
 <meta name="description" property="og:description" content={description} />
 <meta property="og:description" content={description} />
 <meta name="viewport" content="width=device-width" />
