Update img format

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,7 +18,7 @@ import SoftwareLanguages from '../components/SoftwareLanguages.astro';
 				<img
 					width="1553"
 					height="873"
-					src="/assets/me/me-2.jpg"
+					src="/assets/me/me-2.webp"
 					alt="Nikko Thorne"
 				/>
 			</Hero>
