--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,11 +17,19 @@ const { title, description } = Astro.props;
 
 <html lang="en">
 	<head>
-		<MainHead title={title} description={description} />
-		<link rel="preload" href="https://fonts.googleapis.com/css2?family=..." as="style">
-  		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=..." media="print" onload="this.media='all'">
-
-	</head>
+		<!-- Preload font to prioritize download -->
+		<link rel="preload" href="https://fonts.googleapis.com/css2?family=YourFontFamily:wght@400;700&display=swap" as="style">
+	  
+		<!-- Asynchronous loading of Google Fonts with media="print" and onload -->
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=YourFontFamily:wght@400;700&display=swap" media="print" onload="this.media='all'">
+	  
+		<!-- Ensure fonts are pre-cached and optimized -->
+		<noscript>
+		  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=YourFontFamily:wght@400;700&display=swap">
+		</noscript>
+		<!-- Other head tags -->
+	  </head>
+	  
 	<body>
 		<div class="stack backgrounds">
 			<Nav />
@@ -55,6 +63,11 @@ const { title, description } = Astro.props;
 				--bg-image-main-curves: url('/assets/backgrounds/bg-main-dark.svg');
 				--bg-svg-blend-mode: darken;
 				--bg-blend-mode: lighten;
+			}
+
+			@font-face {
+				font-family: Montserrat;
+				font-display: swap; /* or block */
 			}
 
 			/* These backgrounds are displayed below the fold, so we lazy load them
@@ -116,6 +129,9 @@ const { title, description } = Astro.props;
 					--bg-gradient-size: none;
 				}
 			}
+			body {
+      font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+    }
 		</style>
 	</body>
 </html>
