--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,9 +2,7 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 import ContactCTA from '../components/ContactCTA.astro';
 import Hero from '../components/Hero.astro';
-import softwareLanguages from '../components/SoftwareLanguages.astro';
-import certifications from '../components/SoftwareLanguages.astro';
-import SoftwareLanguages from '../components/SoftwareLanguages.astro';
+import Skill from '../components/Languages.astro';
 
 ---
 
