--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,10 +64,9 @@
 	--text-5xl: 4.5rem;
 
 	/* Fonts */
-	--font-system: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	--font-body: 'Public Sans', var(--font-system);
-	--font-brand: Rubik, var(--font-system);
+		--font-system: Arial, sans-serif;
+		--font-body: Arial, sans-serif;
+		--font-brand: Arial, sans-serif;
 
 	/* Transitions */
 	--theme-transition: 0.2s ease-in-out;
