--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,6 +18,7 @@ const { title, description } = Astro.props;
 <html lang="en">
 	<head>
 		<MainHead title={title} description={description} />
+		<link rel="preload" href="/assets/backgrounds/bg-main-light-1440w.webp" as="image">
 	</head>
 	<body>
 		<div class="stack backgrounds">
