--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -71,7 +71,7 @@ const { title, description } = Astro.props;
 			   once the `.loaded` class has been set.  */
 			:root.loaded {
 				--bg-image-subtle-1: url('/assets/backgrounds/bg-subtle-1-light-800w.webp');
-				--bg-image-subtle-2: url('/assets/backgrounds/bg-subtle-2-light-800w.wepb');
+				--bg-image-subtle-2: url('/assets/backgrounds/bg-subtle-2-light-800w.webp');
 				--bg-image-footer: url('/assets/backgrounds/bg-footer-light-800w.webp');
 			}
 			:root.loaded.theme-dark {
