--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -31,6 +31,8 @@ const { title, description } = Astro.props;
 		<link rel="preload" href="/assets/backgrounds/bg-subtle-2-dark-800w.webp" as="image">
 		<link rel="preload" href="/assets/backgrounds/bg-footer-dark-800w.webp" as="image">
 		<link rel="preload" href="/assets/backgrounds/noise.webp" as="image">
+		<link rel="preload" href="/assets/backgrounds/bg-main-dark-curves.svg" as="image">
+		<link rel="preload" href="/assets/backgrounds/bg-main-light-curves.svg" as="image">
 	</head>
 	<body>
 		<div class="stack backgrounds">
